--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click==8.1.7
 colorama==0.4.6
 Flask==2.3.3
 Flask-Cors==4.0.0
+gunicorn==21.2.0
 imageio==2.31.3
 imageio-ffmpeg==0.4.9
 itsdangerous==2.1.2
@@ -10,6 +11,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 numpy==1.25.2
 opencv-python==4.8.0.76
+packaging==23.1
 Pillow==10.0.1
 psutil==5.9.5
 Werkzeug==2.3.7
